# GameOfLife

./: CMakeLists.txt  Documents - Shortcut.lnk  LICENSE.md  README.md
.github/PULL_REQUEST_TTEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  pull_request_refactoring
doc/: BuildErrors.md  BuildHints.md  Description.md  Descripyion.md  Overview.md  Requirements.md  Resources.md  TODO.md
executable/: CMakeLists.txt
game/: CMakeLists.txt  Configuration.hpp  main.cpp
game_of_life_lib/: CMakeLists.txt
game_of_life_lib/include/: GameOfLife.hpp  Renderer.hpp
game_of_life_lib/include/controller/: RuleSet.hpp
game_of_life_lib/include/model/: Grid.hpp
game_of_life_lib/include/view/: Button.hpp  IconButton.hpp  MessageBox.hpp  Renderer.hpp  VisualGrid.hpp
game_of_life_lib/source/controller/: RuleSet.cpp
game_of_life_lib/source/model/: Grid.cpp
game_of_life_lib/source/view/: Button.cpp  IconButton.cpp  MessageBox.cpp  Renderer.cpp  StateMachine.cpp  VisualGrid.cpp
game_of_life_lib/src/: Button.cpp  GameOfLife.cpp  Renderer.cpp  RuleSet.cpp  VisualGrid.cpp
game_of_life_lib/src/controller/: RuleSet.cpp
src/: Button.cpp  Configuration.hpp  GameOfLife.cpp  Renderer.cpp  VisualGrid.cpp  VisualGrid.hpp  main.cpp
tests/: CMakeLists.txt  RuleSetTests.cpp  main.cpp
tests/helpers/: TestGrids.cpp  TestGrids.hpp
